# trakt-data

./: .gitignore  README.md  date.txt  pyproject.toml  trakt_data.py
.github/: dependabot.yml
.github/workflows/: lint.yml  merge.yml  squash.yml  sync.yml  trakt.yml
collection/: collection-movies.json  collection-shows.json
hidden/: hidden-calendar.json  hidden-dropped.json  hidden-progress-watched.json  hidden-recommendations.json
lists/: list-28545752-on-deck.json  list-35780117-projector-rewatch.json  lists.json  watchlist.json
media/episodes/14/: 1444499.json
media/movies/: 1000015.json  1004891.json  1005401.json  1005421.json  1005440.json  1005644.json  1005789.json  1005793.json  1005802.json  1006226.json  1009138.json  1010850.json  1011724.json  1012040.json  1020977.json  1024811.json  1026370.json  1026879.json  1033738.json  1035841.json  1037890.json  1039953.json  1043857.json  1046176.json  1047264.json  1048093.json  1048115.json  1049679.json  1053491.json  1055619.json  1059479.json  1060883.json  1063420.json  1065701.json  1076480.json  1076665.json  1079172.json  1083999.json  1096228.json  1112194.json  (+138 more)
media/movies/10/: 10.json  100.json  1000015.json  100008.json  100012.json  1000258.json  1001.json  10010.json  10019.json  1002.json  1002460.json  10025.json  10041.json  10046.json  1004891.json  1005.json  1005401.json  1005421.json  1005440.json  1005644.json  1005789.json  1005793.json  1005802.json  1006.json  1006226.json  1007.json  1007292.json  100732.json  1007942.json  1008533.json  1009138.json  1010.json  1010850.json  1011724.json  1012040.json  1014.json  101542.json  10170.json  10177.json  10188.json  (+123 more)
media/movies/11/: 11.json  1101.json  110171.json  110189.json  11032.json  1103249.json  1106274.json  1108.json  11084.json  1110395.json  1111.json  11115.json  1112194.json  111264.json  1113895.json  1114997.json  1117195.json  1117351.json  1119439.json  112.json  11228.json  112404.json  1124448.json  112447.json  1126498.json  11317.json  11320.json  11323.json  1132853.json  11334.json  11360.json  1136565.json  1138.json  11391.json  113917.json  1141.json  114333.json  114335.json  114374.json  1144183.json  (+49 more)
media/movies/12/: 120.json  120007.json  120027.json  120038.json  1203.json  1205.json  1206.json  120953.json  1210.json  121049.json  1212.json  12122.json  121489.json  12190.json  122104.json  12216.json  12217.json  12219.json  12222.json  12223.json  12224.json  12225.json  12230.json  1224.json  12248.json  (+58 more)
media/shows/: 170565.json  170689.json  193839.json  195268.json  195845.json  202400.json  204141.json  217658.json  217691.json  224591.json  227577.json  228595.json  228700.json  230595.json  230778.json  247041.json  249443.json
ratings/: ratings-episodes.json  ratings-movies.json  ratings-shows.json
src/trakt_data/: __init__.py  cache.py  cli.py  export.py  metrics.py  trakt.py
user/: last-activities.json  profile.json  stats.json
watched/: playback.json  progress-shows.json  up-next.json  watched-movies.json  watched-shows.json
(+4259 files in other folders)
