[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "trakt-data"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "click>=8,<9",
    "prometheus-client>=0.21",
    "requests>=2,<3",
]
scripts.trakt-data = "trakt_data:cli.main"

[dependency-groups]
dev = [ "mypy>=1,<2", "ruff>=0.11", "types-requests>=2,<3" ]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
